2001-09-04  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (SKIP_HOWTO): New.
	(elf64_alpha_howto_table): Use it to remove dead ECOFF relocs.
	Fix sizes of 16-bit mem format relocs.
	(elf64_alpha_reloc_map): Update to match.
	(elf64_alpha_relax_with_lituse): Use GPREL16 as appropriate.
	(elf64_alpha_relax_without_lituse): Likewise.
	(elf64_alpha_check_relocs): Handle GPREL16.
	(elf64_alpha_relocate_section): Likewise.
	* reloc.c (BFD_RELOC_ALPHA_USER_*): Remove.
	(BFD_RELOC_ALPHA_GPREL_HI16, BFD_RELOC_ALPHA_GPREL_LO16): New.
	* bfd-in2.h, libbfd.h: Rebuild.

2001-09-04  Jeff Law <law@redhat.com>

	* elf32-h8300.c (elf32_h8_relax_section): New function.
	(elf32_h8_relax_delete_bytes): Likewise.
	(elf32_h8_symbol_address_p): Likewise.
	(elf32_h8_get_relocated_section_contents): Likewise.
	(bfd_elf32_bfd_relax_section): Define.
	(bfd_elf32_bfd_get_relocated_section_contents): Likewise.

	* elf32-h8300.c (special): New function.
	(h8_elf_howto_table): Use it for SPECIAL_FUNCTION field in
	all relocations.
	(elf32_h8_final_link_relocate): Treat R_H8_DIR24A8 like 32bit
	relocations.  Fix problems with the true 24bit reloc R_H8_DIR24R8.
	Fix minor problems with 8bit and 16bit PC relative relocations.

2001-09-01  Andreas Jaeger  <aj@suse.de>

	* vms-tir.c: Add missing prototypes.
	* vms-hdr.c: Likewise.
	* vms-gsd.c: Likewise.
	* vms-misc.c: Likewise.

2001-08-31  H.J. Lu  <hjl@gnu.org>

	* elf32-mips.c (_bfd_mips_elf_check_relocs): Report filename
	with bad relocation.

2001-08-31  Eric Christopher  <echristo@redhat.com>
	    Jason Eckhardt  <jle@redhat.com>

	* bfd/archures.c: Add mipsisa32 and mipsisa64. Remove mips32,
	mips32_4k and mips64.
	* bfd/aoutx.h: Remove bfd_mach_mips32, bfd_mach_mips32_4k,
	bfd_mach_mips64.  Add bfd_mach_mipsisa32, bfd_mach_mipsisa64.
	* bfd/cpu-mips.c: Ditto.
	* bfd/elf32-mips.c (_bfd_mips_elf_final_write_processing): Ditto.
	* bfd/bfd-in2.h: Regenerate.

2001-08-31  Jakub Jelinek  <jakub@redhat.com>
