@@ -3,6 +3,10 @@
 	* ld.texinfo (Options, --stack): Correct default value for stack
 	reserve.
 
+2001-09-05  Tom Rix <trix@redhat.com>
+
+	* emultempl/aix.em : Handle import file XMC_XO and syscall symbols.
+	
 2001-09-03  Andreas Jaeger  <aj@suse.de>
 
 	* emultempl/beos.em: Declare prototypes for comparions functions,
